# flexaudio

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md  RELEASING.md
.github/workflows/: ci.yml  release-crates.yml  release-npm.yml  release-pypi.yml
bindings/flexaudio-py/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
bindings/flexaudio-py/src/: config.rs  denoise.rs  encode.rs  lib.rs  marshal.rs  stream.rs  vad.rs  watcher.rs
crates/flexaudio/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/flexaudio-cli/: Cargo.toml
crates/flexaudio-cli/src/: main.rs
crates/flexaudio-core/: README.md
crates/flexaudio-core/src/: backend.rs  chunk_ring.rs  lib.rs  normalizer.rs  quant.rs  secondary_ring.rs  types.rs
crates/flexaudio-denoise/: Cargo.toml  README.md
crates/flexaudio-denoise/src/: lib.rs
crates/flexaudio-encode/: Cargo.toml  README.md
crates/flexaudio-encode/src/: error.rs  lib.rs  writer.rs
crates/flexaudio-encode/tests/: roundtrip.rs
crates/flexaudio-ffi/: Cargo.toml  README.md
crates/flexaudio-ffi/include/: flexaudio.h
crates/flexaudio-ffi/src/: convert.rs  denoise.rs  error.rs  flac.rs  integration.rs  lib.rs  types.rs  vad.rs  watch.rs
crates/flexaudio-mic/: Cargo.toml  README.md
crates/flexaudio-mic/src/: lib.rs
crates/flexaudio-napi/: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  index.d.ts  index.js  package.json
crates/flexaudio-napi/__test__/: dual.mjs  run-smoke.sh  smoke.mjs
crates/flexaudio-napi/src/: lib.rs
crates/flexaudio-os-linux/: Cargo.toml  README.md
crates/flexaudio-os-linux/src/: lib.rs
crates/flexaudio-os-macos/: Cargo.toml  README.md
crates/flexaudio-os-macos/src/: common.rs  lib.rs  system.rs  tap.rs
crates/flexaudio-os-windows/: Cargo.toml  README.md
crates/flexaudio-os-windows/src/: lib.rs  process.rs  system.rs
crates/flexaudio-vad/: Cargo.toml  README.md
crates/flexaudio-vad/src/: config.rs  lib.rs  resample.rs
crates/flexaudio/src/: device_watcher.rs  lib.rs  mock.rs  stream.rs
crates/flexaudio/tests/: integration.rs
docs/: 再設計計画書.md
