[package]
name = "flexaudio-py"
version.workspace = true
edition.workspace = true
license.workspace = true
# VAD アドオン（flexaudio-vad）が ort / ONNX Runtime のツールチェインの要求で 1.88 を
# 指定しているため、それを引くこのクレートも 1.88 に揃える（flexaudio-napi も napi の
# 要求で 1.88。pyo3 自身の MSRV は 1.83 だが、依存の最大値に合わせる）。
rust-version = "1.88"
authors.workspace = true
repository.workspace = true
description = "PyO3 Python binding for flexaudio. Distributed via PyPI, not crates.io."
# cdylib は crates.io ではライブラリとして消費できない（PyPI 配布）。
publish = false

# Python 拡張モジュール。Python アプリが flexaudio をインプロセスで叩く経路。
# cdylib を `flexaudio`（プラットフォーム拡張 .so/.pyd）として import する。
[lib]
name = "flexaudio"
crate-type = ["cdylib"]

[features]
# maturin（pyproject の [tool.maturin] features）が拡張ビルドで有効化する。
# extension-module を default に入れると `cargo test` のテストバイナリが libpython を
# リンクできず壊れるので（拡張は実行時に Python 本体へリンクする前提）、これだけ
# optional にして cargo build / test は素のままにする。
extension-module = ["pyo3/extension-module"]

[dependencies]
flexaudio = { path = "../../crates/flexaudio" }

# アドオン群。Rust コアの VAD / FLAC / denoise を Python へ露出するために直接リンクする。
# いずれも flexaudio-core には依存せず、interleaved f32 のサンプル列だけを受け取る自己
# 完結のクレート（モデル・エンコーダは埋め込み済みで実行時ネットワーク不要）。
flexaudio-vad = { path = "../../crates/flexaudio-vad" }
flexaudio-encode = { path = "../../crates/flexaudio-encode" }
flexaudio-denoise = { path = "../../crates/flexaudio-denoise" }

# pyo3 0.29（2025 系の安定最新）。
# - abi3-py38: Python 3.8 以降で共通の安定 ABI ホイールを 1 つ吐く（毎マイナーで
#   ビルドし直さなくてよい）。
# - extension-module（libpython を直接リンクせず Python 拡張として読み込む）は上の
#   crate feature 経由で maturin だけが有効化する。
pyo3 = { version = "0.29", features = ["abi3-py38"] }
