[package]
name = "flexaudio-encode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Streaming FLAC encoding sink for recorded audio (pure Rust, fully offline)."
keywords = ["flac", "audio", "encoder", "lossless", "recording"]
categories = ["multimedia::audio", "multimedia::encoding", "compression"]
readme = "README.md"
documentation = "https://docs.rs/flexaudio-encode"

[dependencies]
# 純 Rust FLAC エンコーダ (Apache-2.0)。default features (log/par/serde) は
# 一括エンコード経路のマルチスレッド化や設定のシリアライズ向けで、フレーム単位の
# 逐次エンコードには不要なので落とす（crossbeam-channel / serde / log を引かない）。
flacenc = { version = "0.5", default-features = false }
thiserror = { workspace = true }
# f32→s16 量子化の正典（全層で同一実装を共有するため core の quantize_i16 を使う）。
flexaudio-core = { path = "../flexaudio-core", version = "0.3.0" }

[dev-dependencies]
# 往復検証用の純 Rust FLAC デコーダ (Apache-2.0)。テストのみ。
claxon = "0.4"
